java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119c-hints.pass
Create field e in org.netbeans.test.java.hints.IncorrectType58119c
Create parameter e
Create local Variable e
